<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddItem">


    <TextView
        android:id="@+id/tv_additem"
        android:layout_width="196dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:gravity="center|clip_vertical"

        android:text="@string/tv_additem"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_product_name"
        android:layout_width="210dp"
        android:layout_height="57dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_additem"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_product_price"
        android:layout_width="210dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_product_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_product_name"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_product_description"
        android:layout_width="210dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_product_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_product_price"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_prduct"
        android:layout_width="131dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/tv_prduct"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/et_product_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_additem" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="133dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/tv_price"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/et_product_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_prduct" />

    <TextView
        android:id="@+id/tv_product_description"
        android:layout_width="142dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/tv_product_description"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/et_product_description"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    <ImageView
        android:id="@+id/img_saree"
        android:layout_width="178dp"
        android:layout_height="156dp"
        android:layout_marginTop="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_description"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_select_img"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_select_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_saree" />

    <Button
        android:id="@+id/btn_upload_img"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_upload_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_img" />

</androidx.constraintlayout.widget.ConstraintLayout>