<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryReview">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="210dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bllue" />

    <TextView
        android:id="@+id/tv_pname"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/tv_pname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_qty"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/tv_qty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_pname" />

    <TextView
        android:id="@+id/tv_pprice"
        android:layout_width="149dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"

        android:text="@string/tv_pprice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_qty" />

    <TextView
        android:id="@+id/tv_discount"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_discount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_delivery_method"
        android:layout_width="112dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_delivery_method"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_dis" />

    <EditText
        android:id="@+id/et_enter_dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/et_enter_dis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_discount"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_disc"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:background="@color/design_default_color_error"
        android:text="@string/btn_disc"
        android:textSize="20sp"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/et_enter_dis"
        app:layout_constraintTop_toBottomOf="@+id/tv_pprice" />

                <TextView
                    android:id="@+id/tv_nav"
                    android:layout_width="0dp"
                    android:layout_height="220dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:background="#FFB6C1"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="97dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delivery_method">

                    <RadioButton
                        android:id="@+id/tv_cardpay1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_cardpay1" />

                    <RadioButton
                        android:id="@+id/tv_cod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_cod" />

    </RadioGroup>

                <TextView
                    android:id="@+id/tv_subtot"
                    android:layout_width="94dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="128dp"
                    android:layout_marginLeft="128dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/tv_subtot"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <TextView
                    android:id="@+id/tv_delivery_charge"
                    android:layout_width="94dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="128dp"
                    android:layout_marginLeft="128dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/tv_delivery_charge"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_nav"
                    app:layout_constraintTop_toBottomOf="@+id/tv_subtot" />

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="94dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="128dp"
                    android:layout_marginLeft="128dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/tv_total"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_delivery_charge" />

                <Button
                    android:id="@+id/tv_continue"
                    android:layout_width="178dp"
                    android:layout_height="49dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/tv_continue"
                    app:backgroundTint="@color/design_default_color_error"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_nav"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>