<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wishlist"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="53dp">

    <TextView
        android:id="@+id/tv_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFB6C1"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="205dp"
        android:layout_height="178dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bllue" />

    <Button
        android:id="@+id/btn_wishlist_delete"
        android:layout_width="65dp"
        android:layout_height="59dp"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/btn_wishlist_delete"
        android:textSize="15dp"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pname_wishlist"
        android:layout_width="126dp"
        android:layout_height="34dp"
        android:layout_marginTop="152dp"
        android:hint="Product Name"
        android:text="@string/tv_pname_wishlist"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_price_wishlist"
        android:layout_width="126dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:hint="Product Price"
        android:text="@string/tv_price_wishlist"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_pname_wishlist" />

    <Button
        android:id="@+id/btn_select_option"
        android:layout_width="118dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_select_option"
        android:textColor="@color/black"
        app:backgroundTint="@color/design_default_color_error"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_wishlist" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="39dp"
        android:layout_height="43dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_pname_wishlist"
        app:layout_constraintEnd_toEndOf="@+id/tv_nav"
        app:srcCompat="@drawable/img_1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="51dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="@+id/tv_nav"
        app:srcCompat="@drawable/img_2" />

</androidx.constraintlayout.widget.ConstraintLayout>